CHANGE-LOG:

  1/29/17 Update 10
    - ADDED Comments to various files
    - REMOVED un-needed lines of code from [train_data() Driver.py]
    - ADDED support for Doom1.wad
    - FIXEDBUG from [ai_play() DoomSim.py] and [human_play() DoomSim.py]

  1/31/17 Update 11
    - FIXEDBUG in configs and DataProcessor.py
    - ADDED feature to StatePredictionModel in Models.py
    - ADDED test case in Driver.py

  2/2/17 Update 12
    - ADDED data sets
    - FIXEDBUG in DoomSim.py
    - UPDATED StatePredictionModel
    - ADDED DataVisualizer.py

  2/11/17 v.0.0.0
    - REVISED project scope
    - IMPLEMENTED Q-learn training for vizDoom with qlearning4k modules

  2/14/17 v.0.0.1
    - REVISED Q-learn code from qlearning4k modules

  2/16/17 v.0.0.2
    - FIXED Q-learn bugs
    - REVISED README.md