@@ -10,21 +10,25 @@ import os
 os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'
 from Qlearning4k import QLearnAgent
 from Doom import Doom
-from Models import DoomQModel
+from Models import DQModel, DDQModel
+import matplotlib.pyplot as plt
 
 # Parameters
 scenario = 'configs/rigid_turning.cfg'
-frame_skips = 6
+frame_skips = 5
+depth_radius = 0.225
+depth_contrast = 0.875
 qlearn_param = {
-    'nb_epoch' : 100,
+    'target_update' : 1000,
+    'nb_epoch' : 50,
     'steps' : 5000,
-    'batch_size' : 50,
+    'batch_size' : 40,
     'memory_size' : 10000,
     'nb_frames' : 3,
     'alpha' : 1.0,
     'gamma' : 0.9,
     'epsilon' : [1.0, 0.1],
-    'epsilon_rate' : 0.5,
+    'epsilon_rate' : 1.0,
     'observe' : 10,
     'checkpoint' : 5,
     'filename' : 'rigid_turning_.h5'
@@ -35,10 +39,10 @@ def train():
     '''
 
     #Initiates VizDoom Scenario
-    doom = Doom(scenario, frame_skips=qlearn_param['frame_skips'])
+    doom = Doom(scenario, frame_skips=frame_skips, depth_radius=depth_radius, depth_contrast=depth_contrast)
 
     # Preform Q Learning on Scenario
-    model = DoomQModel(resolution=doom.get_state().shape[-2:], nb_frames=qlearn_param['nb_frames'], nb_actions=len(doom.actions))
+    model = DDQModel(resolution=doom.get_state().shape[-2:], nb_frames=qlearn_param['nb_frames'], nb_actions=len(doom.actions))
     agent = QLearnAgent(model, **qlearn_param)
     agent.train(doom)
     model.save_weights("rigid_turning.h5")
@@ -49,10 +53,10 @@ def play():
 
     '''
     #Initiates VizDoom Scenario
-    doom = Doom(scenario, frame_skips=4)
+    doom = Doom(scenario, frame_skips=4, depth_radius=depth_radius, depth_contrast=depth_contrast)
 
     # Run Scenario and play replay
-    model = DoomQModel(resolution=doom.get_state().shape[-2:], nb_frames=qlearn_param['nb_frames'], nb_actions=len(doom.actions))
+    model = DDQModel(resolution=doom.get_state().shape[-2:], nb_frames=qlearn_param['nb_frames'], nb_actions=len(doom.actions))
     model.load_weights('rigid_turning_.h5')
     agent = QLearnAgent(model, **qlearn_param)
     doom.run(agent, save_replay='test.lmp', verbose=True)
@@ -65,10 +69,13 @@ def test():
 
     '''
     #Initiates VizDoom Scenario and play
-    doom = Doom('configs/rigid_turning.cfg')
-    doom.replay('test_0.lmp')
+    doom = Doom('configs/rigid_turning.cfg', depth_radius=depth_radius, depth_contrast=depth_contrast)
+    #plt.imshow(doom.get_state().reshape((120, 160)), interpolation='nearest', cmap='gray')
+    #plt.show()
+    doom.replay('rigid_turning_.lmp')
+    #doom.human_play()
 
 if __name__ == '__main__':
-    #train()
-    test()
+    train()
+    #test()
     #for i in range(10): play()
