@@ -33,7 +33,7 @@ class QModel():
 
     def save_weights(self, filename): pass
 
-class DoomQModel(QModel):
+class DQModel(QModel):
     """
     QModel class is used to define Deep Q-Learning models for the Vizdoom
 
@@ -50,9 +50,10 @@ class DoomQModel(QModel):
         #Input Layers
         x0 = Input(shape=(nb_frames, resolution[0], resolution[1]))
 
-        #Convolutional Layer4
+        #Convolutional Layer
         m = Convolution2D(32, 8, 8, subsample = (4,4), activation='relu')(x0)
         m = Convolution2D(64, 5, 5, subsample = (2,2), activation='relu')(m)
+        m = Convolution2D(64, 3, 3, subsample = (2,2), activation='relu')(m)
         m = Flatten()(m)
 
         # Fully Connected Layer
@@ -61,9 +62,10 @@ class DoomQModel(QModel):
         #Output Layer
         y0 = Dense(nb_actions)(m)
 
-        self.q_net = Model(input=x0, output=y0)
-        self.q_net.compile(optimizer=self.optimizer, loss=self.loss_fun)
-        #self.q_net.summary()
+        self.online_network = Model(input=x0, output=y0)
+        self.online_network.compile(optimizer=self.optimizer, loss=self.loss_fun)
+        self.target_network = None
+        #self.online_network.summary()
 
     def predict(self, S, q):
         '''
@@ -74,10 +76,64 @@ class DoomQModel(QModel):
     def load_weights(self, filename):
         '''
         '''
-        self.q_net.load_weights('../data/model_weights/' + filename)
-        self.q_net.compile(optimizer=self.optimizer, loss=self.loss_fun, metrics=['accuracy'])
+        self.online_network.load_weights('../data/model_weights/' + filename)
+        self.online_network.compile(optimizer=self.optimizer, loss=self.loss_fun, metrics=['accuracy'])
 
     def save_weights(self, filename):
         '''
         '''
-        self.q_net.save_weights('../data/model_weights/' + filename, overwrite=True)
+        self.online_network.save_weights('../data/model_weights/' + filename, overwrite=True)
+
+class DDQModel(QModel):
+    """
+    QModel class is used to define Deep Q-Learning models for the Vizdoom
+
+    """
+
+    def __init__(self, resolution=(120, 160), nb_frames=1, nb_actions=2):
+        '''
+
+        '''
+        #Parameters
+        self.loss_fun = 'mse'
+        self.optimizer = RMSprop(lr=0.00025)
+
+        #Input Layers
+        x0 = Input(shape=(nb_frames, resolution[0], resolution[1]))
+
+        #Convolutional Layer
+        m = Convolution2D(32, 8, 8, subsample = (4,4), activation='relu')(x0)
+        m = Convolution2D(64, 5, 5, subsample = (2,2), activation='relu')(m)
+        m = Convolution2D(64, 3, 3, subsample = (2,2), activation='relu')(m)
+        m = Flatten()(m)
+
+        # Fully Connected Layer
+        m = Dense(800, activation='relu')(m)
+
+        #Output Layer
+        y0 = Dense(nb_actions)(m)
+
+        self.online_network = Model(input=x0, output=y0)
+        self.online_network.compile(optimizer=self.optimizer, loss=self.loss_fun)
+        self.target_network = Model(input=x0, output=y0)
+        self.target_network.compile(optimizer=self.optimizer, loss=self.loss_fun)
+        #self.online_network.summary()
+
+    def predict(self, S, q):
+        '''
+        '''
+        a = q
+        return a
+
+    def load_weights(self, filename):
+        '''
+        '''
+        self.online_network.load_weights('../data/model_weights/' + filename)
+        self.online_network.compile(optimizer=self.optimizer, loss=self.loss_fun, metrics=['accuracy'])
+        self.target_network.load_weights('../data/model_weights/' + filename)
+        self.target_network.compile(optimizer=self.optimizer, loss=self.loss_fun, metrics=['accuracy'])
+
+    def save_weights(self, filename):
+        '''
+        '''
+        self.online_network.save_weights('../data/model_weights/' + filename, overwrite=True)
