@@ -1,4 +1,4 @@
-# This file was generated by ViZDoom 1.1.0 (ZDOOM 2.8.1) on Sun Feb 19 10:06:22 2017
+# This file was generated by ViZDoom 1.1.0 (ZDOOM 2.8.1) on Sun Feb 19 22:08:57 2017
 
 # These are the directories to automatically search for IWADs.
 # Each directory should be on a separate line, preceded by Path=
@@ -322,7 +322,7 @@ hud_showscore=false
 hud_showstats=false
 hud_showitems=false
 hud_showmonsters=true
-hud_showsecrets=true
+hud_showsecrets=false
 hud_althud=false
 hud_althudscale=2
 st_oldouch=false
@@ -337,7 +337,7 @@ hud_scale=true
 allcheats=false
 r_stretchsky=true
 r_shadercolormaps=true
-screenblocks=11
+screenblocks=12
 r_deathcamera=false
 cl_showsecretmessage=true
 cl_bloodtype=2
