@@ -1,12 +1,15 @@
 doom_game_path = ../wads/Doom2.wad
 doom_scenario_path = ../wads/exit_finding.wad
 doom_map = map01
+mode = PLAYER
+doom_skill = 5
 
 # rewards
 living_reward = -1
 
 # rendering options
 screen_resolution = RES_160x120
+depth_buffer_enabled = true
 screen_format = CRCGCB
 render_hud = true
 render_minimal_hud = true
@@ -17,7 +20,6 @@ render_effects_sprites = false
 render_particles = false
 render_corpses = false
 render_messages = false
-automap_render_textures = false
 
 # make episodes start after 20 tics (after unholstering the gun)
 episode_start_time = 14
@@ -26,14 +28,11 @@ episode_start_time = 14
 episode_timeout = 500
 
 # available buttons
-available_buttons = 
+available_buttons =
 	{
 		MOVE_FORWARD
 		MOVE_BACKWARD
 		TURN_LEFT
 		TURN_RIGHT
-		
-	}
 
-mode = PLAYER
-doom_skill = 5
+	}
