@@ -1,10 +1,10 @@
-# rigid_turning.cfg
+# rigi_turning.cfg
 
 doom_game_path = ../wads/Doom2.wad
-doom_scenario_path = ../wads/rigid_turning.wad
+doom_scenario_path = ../wads/Doom2.wad
 doom_map = map01
 mode = PLAYER
-doom_skill = 5
+doom_skill = 0
 
 # rewards
 living_reward = -1
@@ -27,7 +27,7 @@ render_messages = false
 episode_start_time = 14
 
 # make episodes finish after 500 actions (tics)
-episode_timeout = 500
+episode_timeout = 3000
 
 # available buttons
 available_buttons =
